# LLMTowin

./: .gitignore  README.md  pyproject.toml  run_pipeline.py  test_env.py
llm_engineering/: __init__.py  settings.py
llm_engineering/application/crawlers/: __init__.py  base.py  custom_article.py  github.py  linkedin.py  medium.py
llm_engineering/application/networks/: embeddings.py
llm_engineering/application/utils/: split_user_full_name.py
llm_engineering/domain/: documents.py  types.py
llm_engineering/domain/base/: nosql.py  vector.py
llm_engineering/infrastructure/db/: mongo.py  qdrant.py
pipelines/: digital_data_etl.py
steps/etl/: __init__.py  crawl_links.py  get_or_create_user.py
vscode/: settings.json
